@@ -211,5 +211,7 @@ DirNotFound = Složka obsahující uživatelské knihovny musí být definovaná
 ChangeKeyWarning = Varování: makro bude změněno a nemůže být správně vizualizováno jestliže je stále používáno výkresem. Pokračovat?
 InvalidCharLib = Jméno knihovny je rovněž použito jako jméno souboru: nemělo by obsahovat neplatné znaky pro toto použití: /\~[],;{}"&.
 lib_filename = Jméno souboru knihovny:
-
 Copy_split = Kopírovat, rozdělit nestandardní makra
+
+Save_split = Save, split non standard macros
+Font_size_invalid=The font size of the text associated to graphic elements should be positive. 
