@@ -210,5 +210,7 @@ DirNotFound = Der Benutzerbibliothek Ordner muss in den Einstellungen eingestell
 ChangeKeyWarning = Achtung: Diese Operation könnte die aktuelle Zeichnung veralten. Fortfahren?
 InvalidCharLib = Eine Bibliotheksname wird auch als Dateiname benutzt: Die muss keine ungültige Schriftzeichnen enthalten (/\~[],;{}"&).
 lib_filename = Bibliotheksname:
-
 Copy_split = Kopieren, Trennen nicht standardisierte Makros
+
+Save_split = Save, split non standard macros
+Font_size_invalid=The font size of the text associated to graphic elements should be positive. 
