@@ -211,5 +211,7 @@ DirNotFound = De locatie van de bibliotheek moet eerst worden gedefinieerd in de
 ChangeKeyWarning = Waarschuwing: deze handeling maakt dat de huidige tekening wellicht verouderd. Doorgaan?
 InvalidCharLib = De naam van een bibliotheek wordt ook gebruikt als de naam van een bestand: het mag geen ongeldige tekens bevatten zoals: /\~[],;{}"&.
 lib_filename = Bibliotheek bestandsnaam:
-
 Copy_split = Copy, split non standard macros
+
+Save_split = Save, split non standard macros
+Font_size_invalid=The font size of the text associated to graphic elements should be positive. 
