@@ -211,5 +211,7 @@ DirNotFound = The user library directory should be defined in the FidoCadJ setti
 ChangeKeyWarning = Warning: the macro will be changed and could not be visualized correctly if it is already in use in your drawing. Continue?
 InvalidCharLib = A library name is also used as a file name: it should not contain invalid characters for this use: /\~[],;{}"&.
 lib_filename = Library filename:
-
 Copy_split = Copy, split non standard macros
+
+Save_split = Save, split non standard macros
+Font_size_invalid=The font size of the text associated to graphic elements should be positive. 
