@@ -94,7 +94,7 @@ public class Globals
     
   								
     // Version. This is shown in the main window title bar
-    public static final String version = "0.24.3 beta";
+    public static final String version = "0.24.3 gamma";
     // Is it a beta version?
     public static final boolean isBeta = true;	
     
